# esp-sec-ports-demo

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  sdkconfig
components/dropbear/: CMakeLists.txt  Makefile.dropbear  build_tomcrypt.sh  config.h  crypt.h  dbutil.c  default_options_guard.h  localoptions.h  ssh.c  syslog.h
components/dropbear/netinet/: in_systm.h  ip.h
components/radius/: CMakeLists.txt  config.h  netdb.c  termios.h
components/tinyssh/: CMakeLists.txt  make_tinyssh.sh
main/: CMakeLists.txt  main.c  radembedded.c
